--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(includes)
 
 add_executable(main_debug main.cpp)
-add_library(reactive STATIC includes/library.cpp main.cpp includes/vehicle.cpp includes/vehicle.h)
+add_library(reactive STATIC main.cpp includes/vehicle.cpp includes/vehicle.h includes/vehiclePhysics.cpp)
 
 find_library(REACTIVE_LIBRARY reactive lib)
 target_link_libraries(main_debug LINK_PUBLIC ${REACTIVE_LIBRARY})
